  ToggleValueLink removed
  Control.Toggle added
  createToggleControl() moved back to Controls
  Control.Toggle moved up to ToggleControl
  ValueLinks, EntityUiUtil, some generification
  EntityUiUtil, removed redundant null check
  EntityUiUtil.LookupUIValue privatized
  EntityLookupField, some minor changes
  'Bean' removed from common.ui.control.ValueLinks method names
  ValueLink privatized, made inner class of ValueLinks
  ValueLink no longer extends Action
  LinkType, ValueLinks moved from common.ui.control to common.ui
  ColumnSearchPanel.DefaultInputFieldProvider.createTextProperty() bug fixed, missing conditional
  Controls.toggle... methods moved to ValueLinks, due to cyclical dependency
  ValueLinks.toggle... methods moved back to Controls
  common.Values refactored from ValueLinks
  common.ui.UiValues refactored from ValueLinks
  LinkType deprecated
  LinkType removed
  ValueLinks refactored
  Values.ValueLink, readOnly attribute removed
  PropertyImpl.DateColumnValueConverter bug fixed, did not handle null values correctly
  Values.value() added along with Values.ValueImpl
  ValuesTest added
  UiValuesTest added, common.ui.valuemap tests ignored
  common.ui.valuemap tests removed
  UiValues.TextUiValue field textComponent replaced with document
  UiValues.TextUiValue.getText() synchronizes on document
  EntityLookupField, searchHint is enabled after the field has been linked with the model, since that removed the search hint text
  TextFieldHint.updateState() privatized, only used due to the above
  ForeignKeySearchPanel.initializeForeignKeyField() removed lookup field initialization code
  ForeignKeySearchPanel.initializeInputField() now returns null for lower bound fields
  PropertyImpl.getTypeClass() now returns byte[].class for BLOB properties
  EntityConnectionImpl.setForeignKeyValues() now calls setValue() with validateType parameter as false
  EntityImpl, PropertyImpl, some minor optimizations, using package protected fields